# monet

./: .gitignore  .mcp.json  CLAUDE.md  DESIGN.md  README.md  pyproject.toml
src/monet/: canvas.py  cli.py  config.py  mcp_server.py  orchestrator.py  prompt.py  renderer.py  response_parser.py
src/monet/providers/: anthropic.py  base.py  gemini.py
tests/: test_canvas.py  test_mcp_server.py  test_orchestrator.py  test_renderer.py  test_response_parser.py
